--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -10,7 +10,7 @@
 <li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="name" name="name"	 required></li>
 
 <li id="vendor_li"><label for="vendor">Vendor: </label>
-<select id='vendor' name="vendor" multiple >
+<select size="7" id='vendor' name="vendor" multiple >
     {% for i in vendor_queryset %}
           <option>{{ i.name }}</option>
     {% endfor %}
@@ -28,7 +28,7 @@
  </li>
 
   <li><label for="server">Server: </label>
-  <select size="7" id='server' name="server">
+  <select id='server' name="server">
       {% for i in server_queryset %}
           <option>{{ i.name }}</option>
   {% endfor %}
