Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -30,7 +30,7 @@
   <li><label for="server">Server: </label>
   <select id='server' name="server">
       {% for i in server_queryset %}
-          <option>{{ i.name }}</option>
+          <option value={{ i.name }}>{{ i.name }} ({{ i.ip }})</option>
   {% endfor %}
   </select>
 
