Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -85,12 +85,12 @@ function add() {
 function toggleCheckbox(element) {
     if (element.checked){
         //$("#vendor_li").css('display','none');
-        $("#vendor_li").attr('disabled','disabled');
+        $("#vendor_li").siblings().attr('disabled','disabled');
         $("#device_li").css('display','block');
     }
     else {
         //$("#vendor_li").css('display','block');
-        $("#vendor_li").removeAttr('disabled');
+        $("#vendor_li").siblings().removeAttr('disabled');
         $("#device_li").css('display','none');
     }
 }
