Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -63,6 +63,7 @@ function add() {
     vendor_selected_values = []
     device_selected_values=[]
     server=document.getElementById('server').value;
+    console.log(typeof(server))
     custom_server_name=document.getElementById('custom_server_name').value;
     custom_server_ip=document.getElementById('custom_server_ip').value;
     for ( var i = 0; i < vendor.selectedOptions.length; i++) {
