--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -108,6 +108,7 @@ function customDevice(element) {
 function customServer(element) {
     if (element.checked){
         $("#server > option").attr('disabled',true);
+        $("#server > option").prop("selected", false);
         $("#custom_server_ul").css('display','block');
     }
     else {
