--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -31,7 +31,7 @@
 
   <li><label for="server">Server: </label>
   <select id='server' name="server">
-  <option selected>None</option>
+  <option disabled selected value>None</option>
       {% for i in server_queryset %}
           <option value={{ i.name }}>{{ i.name }} ({{ i.ip }})</option>
   {% endfor %}
@@ -62,6 +62,9 @@ function add() {
     vendor = document.getElementById('vendor');
     vendor_selected_values = []
     device_selected_values=[]
+    if (document.getElementById('server').value === 'None') {
+        server=
+    }
     server=document.getElementById('server').value;
     console.log(typeof(server))
     custom_server_name=document.getElementById('custom_server_name').value;
@@ -96,6 +99,7 @@ function customDevice(element) {
     if (element.checked){
         //$("#vendor_li").css('display','none');
         $("#vendor > option").attr('disabled',true);
+        $("#vendor > option:first-child").prop("selected", true);
         $("#device_li").css('display','block');
     }
     else {
