--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -34,12 +34,12 @@
   <option disabled selected value>None</option>
       {% for i in server_queryset %}
           <option value={{ i.name }}>{{ i.name }} ({{ i.ip }})</option>
-  {% endfor %}
+      {% endfor %}
   </select>
 
   </li>
 <li><label for="custom_server">Custom server</label><input type="checkbox" id="custom_server" name="custom" onclick="customServer(this)"></li>
-<ul id="custom_server_ul" style="display: none; list-style-type:none ;text-align: left;">
+<ul id="custom_server_ul" style="display: none; text-align:left; list-style-type:none ;text-align: left;">
 <li><label for="name">Hostname: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="custom_server_name" name="custom_server_name"	 required></li>
 <li><label for="name">IP: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="custom_server_ip" name="custom_server_ip"	 required></li>
 </ul>
