Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block content %}
-<div class="ssid-detail-container">
+<div class="ssid-add-container">
 <img width="256px" height="256px" src="{% static 'images/wifidevice.png' %}">
 <form action="/">
 
