--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -251,7 +251,7 @@ ul.inside {
 
 
 /*SSID add*/
-.ssid-detail-container {
+.ssid-add-container {
     margin-top: 100px;
     width:350px;
     margin-left: auto;
