--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -7,7 +7,7 @@
 <form action="/">
 
 <ul class="ssid-detail-list">
-<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z0-9]+" type="text" id="name" name="name"	 required></li>
+<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z0-9,]+" type="text" id="name" name="name"	 required></li>
 
 <li id="vendor_li"><label for="vendor">Vendor: </label>
 <select size="7" id='vendor' name="vendor" multiple >
