--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -7,7 +7,7 @@
 <form action="/">
 
 <ul class="ssid-detail-list">
-<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	 required></li>
+<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	 required><span id="wrchar" style="display:none">Enter correct characters Ex: ssid1,ssid2</span></li>
 
 <li id="vendor_li"><label for="vendor">Vendor: </label>
 <select size="7" id='vendor' name="vendor" multiple >
@@ -128,6 +128,7 @@ function validateName(){
     var TCode = document.getElementById('name').value;
 
     if( /[^a-zA-Z0-9\,\-\/]/.test( TCode ) ) {
+        $("#wrchar").fadeIn("slow").delay( 2000 ).fadeOut("slow");
         alert('Input is not alphanumeric');
         return false;
     }
