--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -128,7 +128,9 @@ function validateName(){
     var TCode = document.getElementById('name').value;
 
     if( /[^a-zA-Z0-9\,\-\/]/.test( TCode ) ) {
+        $('#name').css('border','red solid 1px ');
         $("#wrchar").fadeIn("slow").delay( 2000 ).fadeOut("slow");
+        //$('#name').css('border','red solid 1px ');
         return false;
     }
 
