Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -131,7 +131,7 @@ function validateName(){
     if( /[^a-zA-Z0-9\,\-\/]/.test( TCode ) ) {
         $('#name').css('border','red solid 1px ');
         $("#wrchar").fadeIn("slow").delay( 2000 ).fadeOut("slow");
-        //$('#name').css('border','red solid 1px ');
+        $('#name').css('border','');
         return false;
     }
 
