Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -96,7 +96,10 @@ function add() {
         }
     }) */
 }
+else {
+        console.log('Enter correct name or server values')
     }
+}
 
 function customDevice(element) {
     if (element.checked){
