--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -75,7 +75,7 @@ function add() {
     for (var i = 0; i < device.selectedOptions.length; i++) {
         device_selected_values.push(device.selectedOptions[i].value)
     }
-    console.log('name=' + name + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server);
+    console.log('name=' + name.length + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server.length);
     if (name.length > null && server.length > null) {
         console.log('Sending ajax')
     /* $.ajax({
