Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -48,7 +48,7 @@
 </ul>
 </ul>
 <input type="button" value='add' id="Add" onClick="add()" />
-<li><span id="novalues" style="display:none;color:red;list-style: none">Please select required values: Name,Vendor(or device),Server</span></li>
+<li><span id="novalues" style="display:none;color:red;list-style-type: none">Please select required values: Name,Vendor(or device),Server</span></li>
 {% csrf_token %}
 </form>
 <input class="link-to-main" type="button" onclick="location.href='/';"/>
