Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -47,7 +47,7 @@
 <li><span id="wrcharip" style="display:none;color:red;">Enter correct ssid name: ssid1,ssid2</span></li>
 </ul>
 </ul>
-<input type="button" value='add' id="Add" onClick="add()" />
+<input type="button" value='add' id="Add" onClick="add()" /> <br>
 <span id="novalues" style="display:none;color:red;list-style-type: none">Please select required values: Name,Vendor(or device),Server</span>
 {% csrf_token %}
 </form>
