Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -89,7 +89,7 @@ function add() {
 
             success : function(json) {
             console.log(json.ssid_server_ip)
-            if (json.ssid_server_ip.length>nulll) {
+            if (json.ssid_server_ip.length>null) {
                 $("#wrcharhostname").fadeIn("slow").delay( 2000 ).fadeOut("slow");
             }
 
