Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -19,8 +19,8 @@
    {% for i in vendor_queryset %}
     <optgroup label={{ i.name }}>
         {% for j in device_queryset %}
-            {{ j.vendor }} - {{ i.name }}
              {% if j.vendor == i.name %}
+                 Hello
                   <option value={{ j.name }}>{{ j.hostname }} ({{ j.name }})</option>
              {% endif %}
         {% endfor %}
